fix: coveñas SRE final

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -2845,7 +2845,7 @@
                           </svg>
                         </div>
                         <div class="card-interactive-icons___box-description">
-                          <p>Botiquin</p>
+                          <p>Botiquín</p>
                         </div>
                       </div>
                     </div>
