--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -3681,7 +3681,7 @@
                                                 </div>
                                                 <div
                                                     class="card-interactive-icons___box-description">
-                                                    <p>Botiquin</p>
+                                                    <p>Botiquín</p>
                                                 </div>
                                             </div>
                                         </div>
