--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -4842,8 +4842,7 @@
                         <div class="card-interactive-icons___box-description">
                           <p>
                             Punto de <br />
-                            Control Externo <br />
-                            y/o Área de Control
+                            Control Externo
                           </p>
                         </div>
                       </div>
@@ -5452,7 +5451,7 @@
                           </svg>
                         </div>
                         <div class="card-interactive-icons___box-description">
-                          <p>Botiquin</p>
+                          <p>Botiquín</p>
                         </div>
                       </div>
                     </div>
@@ -6684,54 +6683,25 @@
                     </span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-monitoreo d-none"
-                    id="covenas-sre-4"
-                  >
-                    <a
-                      target="_blank"
-                      href="/assets/docs/covenas/interno/PCP-TCOV-02_derrame de crudo_ajuste 2024.pdf"
-                      style="--outline-color: none; left: 418px; top: 260px"
-                      class="location-map-dot dot-image"
-                    >
-                      <img src="/assets/img/map-punto-control.svg" alt="" />
+                  <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-4">
+                    <a target="_blank" href="/assets/docs/covenas/interno/PCP-TCOV-02_derrame de crudo_ajuste 2024.pdf" style="--outline-color: none;left: 420px;top: 265px;" class="location-map-dot dot-image">
+                      <img src="/assets/img/map-punto-control.svg" alt="">
                       <span class="dot-image-text">C +</span>
                     </a>
 
-                    <a
-                      target="_blank"
-                      href="/assets/docs/covenas/interno/PCP-TCOV-02_derrame de diluyente_ajuste 2024.pdf"
-                      style="--outline-color: none; left: 412px; top: 285px"
-                      class="location-map-dot dot-image"
-                    >
-                      <img src="/assets/img/map-punto-control.svg" alt="" />
+                    <a target="_blank" href="/assets/docs/covenas/interno/PCP-TCOV-02_derrame de diluyente_ajuste 2024.pdf" style="--outline-color: none;left: 413px;top: 289px;" class="location-map-dot dot-image">
+                      <img src="/assets/img/map-punto-control.svg" alt="">
                       <span class="dot-image-text">D +</span>
                     </a>
                   </div>
 
                   <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-5">
-                    <a
-                      target="_blank"
-                      href="/assets/docs/covenas/externo/PCE-TCOV-POAES-01 ajuste 2024.pdf"
-                      style="--outline-color: none; left: 354px; top: 273px"
-                      class="location-map-dot dot-image"
-                    >
-                      <img
-                        src="/assets/img/map-punto-control-externo.svg"
-                        alt=""
-                      />
+                    <a target="_blank" href="/assets/docs/covenas/externo/PCE-TCOV-POAES-01 ajuste 2024.pdf" style="--outline-color: none;left: 330px;top: 286px;" class="location-map-dot dot-image">
+                      <img src="/assets/img/map-punto-control-externo.svg" alt="">
                       <span class="dot-image-text">PCE 1 +</span>
                     </a>
-                    <a
-                      target="_blank"
-                      href="/assets/docs/covenas/externo/PCE-TCOV-02 ajuste 2024.pdf"
-                      style="--outline-color: none; left: 376px; top: 250px"
-                      class="location-map-dot dot-image"
-                    >
-                      <img
-                        src="/assets/img/map-punto-control-externo.svg"
-                        alt=""
-                      />
+                    <a target="_blank" href="/assets/docs/covenas/externo/PCE-TCOV-02 ajuste 2024.pdf" style="--outline-color: none;left: 350px;top: 263px;" class="location-map-dot dot-image">
+                      <img src="/assets/img/map-punto-control-externo.svg" alt="">
                       <span class="dot-image-text">PCE 2 +</span>
                     </a>
                   </div>
@@ -6795,67 +6765,13 @@
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-sre-7"
                   >
-                    <span
-                      style="
-                        scale: 0.94;
+                    <span style="
+                        scale: 0.95;
                         position: absolute;
-                        left: 190px;
-                        top: 280px;
-                      "
-                      class="location-map-zona"
-                    >
-                      <svg
-                        data-name="Grupo 647"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="746.055"
-                        height="343.389"
-                        viewBox="0 0 746.055 343.389"
-                      >
-                        <defs>
-                          <clippath id="tvh8upghfa">
-                            <path
-                              data-name="Rectángulo 167"
-                              style="stroke: #ffc200; fill: none"
-                              d="M0 0h746.055v343.389H0z"
-                            />
-                          </clippath>
-                        </defs>
-                        <g
-                          data-name="Grupo 646"
-                          style="clip-path: url(#tvh8upghfa)"
-                        >
-                          <path
-                            data-name="Trazado 860"
-                            d="M215.473 343.139a1 1 0 0 1-.821-.429L70.481 135.549l-44.855-3.078a1 1 0 0 1-.581-.238L.6 111.344a1 1 0 0 1 .164-1.635L181.261 9.533a4.231 4.231 0 0 1 2.954-.435l457.248 99.62a1 1 0 0 1 .693 1.4L574.6 254.563a1.191 1.191 0 0 1-.061.111l-8.446 13.334a.934.934 0 0 1-.163.2l-12.888 12a1 1 0 0 1-1.263.082l-15.318-10.942-16.394-.862c-1.709.626-13.308 4.866-15.02 5.293-1.761.44-70.846 17.073-73.786 17.781a.992.992 0 0 1-.171.025L281.572 300.9l-65.56 42.082a1 1 0 0 1-.539.158M26.093 130.5l45 3.088a1 1 0 0 1 .753.427l143.897 206.762 64.967-41.7a1 1 0 0 1 .478-.157l149.691-9.327c2.846-.685 71.959-17.325 73.684-17.756 1.416-.354 11.315-3.947 15.009-5.3a.961.961 0 0 1 .4-.061l16.889.889a.993.993 0 0 1 .528.185l14.891 10.637 12.2-11.355 8.342-13.172 67-143.252-456.033-99.356a2.236 2.236 0 0 0-1.558.23l-.218.12L2.995 110.759z"
-                            style="fill: #ffc200; stroke: #ffc200"
-                          />
-                          <path
-                            data-name="Trazado 861"
-                            d="M215.473 343.139a1 1 0 0 1-.821-.429L70.481 135.549l-44.855-3.078a1 1 0 0 1-.581-.238L.6 111.344a1 1 0 0 1 .164-1.635L181.261 9.533a4.231 4.231 0 0 1 2.954-.435l457.248 99.62a1 1 0 0 1 .693 1.4L574.6 254.563a1.191 1.191 0 0 1-.061.111l-8.446 13.334a.934.934 0 0 1-.163.2l-12.888 12a1 1 0 0 1-1.263.082l-15.318-10.942-16.394-.862c-1.709.626-13.308 4.866-15.02 5.293-1.761.44-70.846 17.073-73.786 17.781a.992.992 0 0 1-.171.025L281.572 300.9l-65.56 42.082a1 1 0 0 1-.539.157zM26.093 130.5l45 3.088a1 1 0 0 1 .753.427l143.897 206.762 64.967-41.7a1 1 0 0 1 .478-.157l149.691-9.327c2.846-.685 71.959-17.325 73.684-17.756 1.416-.354 11.315-3.947 15.009-5.3a.961.961 0 0 1 .4-.061l16.889.889a.993.993 0 0 1 .528.185l14.891 10.637 12.2-11.355 8.342-13.172 67-143.252-173.451-37.79-282.582-61.566a2.236 2.236 0 0 0-1.558.23l-.218.12L2.995 110.759z"
-                            style="
-                              stroke-miterlimit: 10;
-                              stroke-width: 0.5px;
-                              stroke: #ffc200;
-                              fill: none;
-                            "
-                          />
-                          <path
-                            data-name="Trazado 862"
-                            d="M717.7 115.14a1.02 1.02 0 0 1-.173-.015L610.855 96.458l-46.734-11.57a1 1 0 0 1-.232-1.852c1.754-.938 15.711-8.4 19.654-10.307-2.645-4.375-19.75-25.886-30.624-39.293a1 1 0 0 1 .375-1.546l72-31.555a1 1 0 0 1 1.047.152l25.507 21.55 39.2.881a1 1 0 0 1 .827.472l53.777 86.667a1 1 0 0 1-.72 1.519l-27.11 3.555a.947.947 0 0 1-.13.009M567.13 83.573 611.268 94.5l106.449 18.626 25.422-3.334-52.675-84.887-39.014-.877a1 1 0 0 1-.623-.236l-25.3-21.375L555.3 33.195c31.072 38.339 30.689 39.66 30.5 40.3a1.116 1.116 0 0 1-.68.708c-.88.305-10.7 5.485-17.992 9.374m16.738-10.217z"
-                            style="fill: #ffc200; stroke: #ffc200"
-                          />
-                          <path
-                            data-name="Trazado 863"
-                            d="M717.7 115.14a1.02 1.02 0 0 1-.173-.015L610.855 96.458l-46.734-11.57a1 1 0 0 1-.232-1.852c1.754-.938 15.711-8.4 19.654-10.307-2.645-4.375-19.75-25.886-30.624-39.293a1 1 0 0 1 .375-1.546l72-31.555a1 1 0 0 1 1.047.152l25.507 21.55 39.2.881a1 1 0 0 1 .827.472l53.777 86.667a1 1 0 0 1-.72 1.519l-27.11 3.555a.947.947 0 0 1-.122.009zM567.13 83.573 611.268 94.5l106.449 18.626 25.422-3.334-52.675-84.887-39.014-.877a1 1 0 0 1-.623-.236l-25.3-21.375L555.3 33.195c31.072 38.339 30.689 39.66 30.5 40.3a1.116 1.116 0 0 1-.68.708c-.878.297-10.697 5.481-17.99 9.37zm16.738-10.217z"
-                            style="
-                              stroke-miterlimit: 10;
-                              stroke-width: 0.5px;
-                              stroke: #ffc200;
-                              fill: none;
-                            "
-                          />
-                        </g>
-                      </svg>
+                        left: 231px;
+                        top: 281px;
+                      " class="location-map-zona">
+                      <img src="/assets/img/covenas/covenas-sre-cerramiento-sector.png" alt="">
                     </span>
                   </div>
 
@@ -8619,26 +8535,26 @@
 
                   <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-13">
                     <!-- Item 1 -->
-                    <span style="--outline-color: #ff5512;left: 392px;top: 321px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff5512;left: 394px;top: 322px;" class="location-map-dot"></span>
                     <!-- Item 2 -->
-                    <span style="--outline-color: #ff5512;left: 415px;top: 312px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff5512;left: 416px;top: 313px;" class="location-map-dot"></span>
                     <!-- Item 3 -->
-                    <span style="--outline-color: #ff5512;left: 442px;top: 348px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff5512;left: 439px;top: 349px;" class="location-map-dot"></span>
                     <!-- Item 4 -->
-                    <span style="--outline-color: #ff5512;left: 461px;top: 331px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff5512;left: 457px;top: 330px;" class="location-map-dot"></span>
                     <!-- Item 5 -->
-                    <span style="--outline-color: #ff5512;left: 483px;top: 331px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff5512;left: 479px;top: 331px;" class="location-map-dot"></span>
                     <!-- Item 6 -->
                     <span style="--outline-color: #ff5512;left: 501px;top: 345px;" class="location-map-dot"></span>
                     <!-- Item 7 -->
-                    <span style="--outline-color: #ff5512;left: 540px;top: 337px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff5512;left: 536px;top: 339px;" class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-14">
                     <!-- Item 1 -->
                     <span style="--outline-color: #ff0000;left: 366px;top: 328px;" class="location-map-dot"></span>
                     <!-- Item 2 -->
-                    <span style="--outline-color: #ff0000;left: 415px;top: 301px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 416px;top: 305px;" class="location-map-dot"></span>
                     <!-- Item 3 -->
                     <span style="--outline-color: #ff0000;left: 517px;top: 374px;" class="location-map-dot"></span>
                     <!-- Item 4 -->
@@ -8657,20 +8573,20 @@
                     <span style="--outline-color: #ff0000;left: 807px;top: 320px;" class="location-map-dot"></span>
                     </div>
 
-                  <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-15">
-                    <!-- Item 1 -->
-                    <span style="--outline-color: #27ff00;left: 330px;top: 376px;" class="location-map-dot"></span>
-                    <!-- Item 2 -->
-                    <span style="--outline-color: #27ff00;left: 470px;top: 315px;" class="location-map-dot"></span>
-                    <!-- Item 3 --> 
-                    <span style="--outline-color: #27ff00;left: 491px;top: 320px;" class="location-map-dot"></span>
-                    <!-- Item 4 -->
-                    <span style="--outline-color: #27ff00;left: 592px;top: 498px;" class="location-map-dot"></span>
-                    <!-- Item 5 -->
-                    <span style="--outline-color: #27ff00;left: 799px;top: 367px;" class="location-map-dot"></span>
-                    <!-- Item 6 -->
-                    <span style="--outline-color: #27ff00;left: 815px;top: 362px;" class="location-map-dot"></span>
-                  </div>
+                    <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-15">
+                      <!-- Item 1 -->
+                      <span style="--outline-color: #27ff00;left: 333px;top: 379px;" class="location-map-dot"></span>
+                      <!-- Item 2 -->
+                      <span style="--outline-color: #27ff00;left: 475px;top: 313px;" class="location-map-dot"></span>
+                      <!-- Item 3 --> 
+                      <span style="--outline-color: #27ff00;left: 494px;top: 320px;" class="location-map-dot"></span>
+                      <!-- Item 4 -->
+                      <span style="--outline-color: #27ff00;left: 592px;top: 498px;" class="location-map-dot"></span>
+                      <!-- Item 5 -->
+                      <span style="--outline-color: #27ff00;left: 799px;top: 367px;" class="location-map-dot"></span>
+                      <!-- Item 6 -->
+                      <span style="--outline-color: #27ff00;left: 815px;top: 362px;" class="location-map-dot"></span>
+                    </div>
 
                   <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-16">
                     <!-- Item 1 -->
@@ -8685,15 +8601,16 @@
 
                   <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-17">
                     <!-- Item 1 -->
-                    <span style="--outline-color: #00ccff;left: 395px;top: 444px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #00ccff;left: 393px;top: 441px;" class="location-map-dot"></span>
                     <!-- Item 2 -->
-                    <span style="--outline-color: #00ccff;left: 407px;top: 444px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #00ccff;left: 406px;top: 441px;" class="location-map-dot"></span>
                     <!-- Item 3 -->
                     <span style="--outline-color: #00ccff;left: 344px;top: 384px;" class="location-map-dot"></span>
                     <!-- Item 4 -->
                     <span style="--outline-color: #00ccff;left: 283px;top: 383px;" class="location-map-dot"></span>
                     <!-- Item 5 -->
-                    <span style="--outline-color: #00ccff;left: 485px;top: 327px;" class="location-map-dot"></span></div>
+                    <span style="--outline-color: #00ccff;left: 485px;top: 327px;" class="location-map-dot"></span>
+                  </div>
 
                   <div
                     class="dots-map-2024 dots-monitoreo d-none"
@@ -8771,10 +8688,7 @@
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-sre-19"
                   >
-                    <span
-                      style="--outline-color: #ff0000; left: 389px; top: 439px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #ff0000;left: 398px;top: 437px;" class="location-map-dot"></span>
                   </div>
                 </div>
                 <img
