--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -2966,7 +2966,7 @@
                                                 </div>
                                                 <div
                                                     class="card-interactive-icons___box-description">
-                                                    <p>Botiquin</p>
+                                                    <p>Botiquín</p>
                                                 </div>
                                             </div>
                                         </div>
