fix: correcciones coveñas final

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -5761,7 +5761,7 @@
                     <span style="--outline-color: #8d12ff; left: 273px; top: 356px" class="location-map-dot"></span>
                     <span style="--outline-color: #8d12ff; left: 347px; top: 382px" class="location-map-dot"></span>
                     <span style="--outline-color: #8d12ff; left: 390px; top: 437px" class="location-map-dot"></span>
-                    <span style="--outline-color: #8d12ff;left: 459px;top: 322px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #8d12ff;left: 457px;top: 321px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6696,11 +6696,11 @@
                   </div>
 
                   <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-5">
-                    <a target="_blank" href="/assets/docs/covenas/externo/PCE-TCOV-POAES-01 ajuste 2024.pdf" style="--outline-color: none;left: 330px;top: 286px;" class="location-map-dot dot-image">
+                    <a target="_blank" href="/assets/docs/covenas/externo/PCE-TCOV-POAES-01 ajuste 2024.pdf" style="--outline-color: none;left: 330px;top: 286px; z-index: 2;" class="location-map-dot dot-image">
                       <img src="/assets/img/map-punto-control-externo.svg" alt="">
                       <span class="dot-image-text">PCE 1 +</span>
                     </a>
-                    <a target="_blank" href="/assets/docs/covenas/externo/PCE-TCOV-02 ajuste 2024.pdf" style="--outline-color: none;left: 350px;top: 263px;" class="location-map-dot dot-image">
+                    <a target="_blank" href="/assets/docs/covenas/externo/PCE-TCOV-02 ajuste 2024.pdf" style="--outline-color: none;left: 350px;top: 263px; z-index: 1;" class="location-map-dot dot-image">
                       <img src="/assets/img/map-punto-control-externo.svg" alt="">
                       <span class="dot-image-text">PCE 2 +</span>
                     </a>
