fix: adjust Cusiana 12 Jun

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -51,7 +51,7 @@
                 <img class="img-fluid" src="/assets/img/cusiana/preparados.svg"
                   alt />
                 <img class="img-fluid"
-                  src="/assets/img/cusiana/nos-relacionamos.svg" alt />
+                  src="/assets/img/cusiana/nos-relacionamos-inactivo.svg" alt />
               </div>
             </div>
             <div class="col-xs-12 col-lg-6">
@@ -2483,7 +2483,7 @@
                       <div data-target="cusiana-sre-5" style="gap: 16px"
                         class="d-flex align-items-center card-interactive-icons__container">
                         <div class="card-interactive-icons___box-icon"
-                          style="--border-fill: #acff9c">
+                          style="--border-fill: #27ff00">
                           <svg xmlns="http://www.w3.org/2000/svg" width="29"
                             height="29" viewBox="0 0 29 29">
                             <defs>
