fix: adjust Cusiana 12 Jun Final

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -2924,7 +2924,7 @@
                       class="location-map-dot"></span>
                       <!--item 2-->
                     <span
-                      style="--outline-color: #ff5512; left: 510px; top: 184px;"
+                      style="--outline-color: #ff5512; left: 514px; top: 189px;"
                       class="location-map-dot"></span>
                       <!--item 3-->
                     <span
@@ -2936,39 +2936,39 @@
                       class="location-map-dot"></span>
                       <!--item 5-->
                     <span
-                      style="--outline-color: #ff5512; left: 494px; top: 216px;"
+                      style="--outline-color: #ff5512; left: 491px; top: 216px;"
                       class="location-map-dot"></span>
                       <!--item 6-->
                     <span
-                      style="--outline-color: #ff5512; left: 566px; top: 305px;"
+                      style="--outline-color: #ff5512; left: 569px; top: 305px;"
                       class="location-map-dot"></span>
                       <!--item 7-->
                     <span
-                      style="--outline-color: #ff5512; left: 614px; top: 211px;"
+                      style="--outline-color: #ff5512; left: 617px; top: 211px;"
                       class="location-map-dot"></span>
                       <!--item 8-->
                     <span
-                      style="--outline-color: #ff5512; left: 617px; top: 242px;"
+                      style="--outline-color: #ff5512; left: 620px; top: 240px;"
                       class="location-map-dot"></span>
                       <!--item 9-->
                     <span
-                      style="--outline-color: #ff5512; left: 621px; top: 277px;"
+                      style="--outline-color: #ff5512; left: 623px; top: 275px;"
                       class="location-map-dot"></span>
                        <!--item 10-->
                     <span
-                      style="--outline-color: #ff5512; left: 656px; top: 277px;"
+                      style="--outline-color: #ff5512; left: 659px; top: 273px;"
                       class="location-map-dot"></span>
                       <!--item 11-->
                     <span
-                      style="--outline-color: #ff5512; left: 656Px; top: 242px;"
+                      style="--outline-color: #ff5512; left: 656Px; top: 239px;"
                       class="location-map-dot"></span>
                       <!--item 12-->
                     <span
-                      style="--outline-color: #ff5512; left: 656px; top: 211px;"
+                      style="--outline-color: #ff5512; left: 652px; top: 209px;"
                       class="location-map-dot"></span>
                       <!--item 13-->
                     <span
-                      style="--outline-color: #ff5512; left: 717px; top: 220px;"
+                      style="--outline-color: #ff5512; left: 719px; top: 217px;"
                       class="location-map-dot"></span>
                   </div>
 
@@ -3048,7 +3048,7 @@
                       class="location-map-dot"></span>
                       <!--item 3-->
                     <span
-                      style="--outline-color: #fc10ff; left: 718px; top: 240px;"
+                      style="--outline-color: #fc10ff; left: 721px; top: 244px;"
                       class="location-map-dot"></span>
                       <!--item 4-->
                     <span
@@ -3565,15 +3565,15 @@
                       class="location-map-dot"></span>
                       <!--item 3-->
                     <span
-                      style="--outline-color: #21a605; left: 716px; top: 230px"
+                      style="--outline-color: #21a605; left: 718px; top: 227px"
                       class="location-map-dot"></span>
                       <!--item 4-->
                     <span
-                      style="--outline-color: #21a605; left: 720px; top: 242px"
+                      style="--outline-color: #21a605; left: 724px; top: 238px"
                       class="location-map-dot"></span>
                       <!--item 5-->
                     <span
-                      style="--outline-color: #21a605; left: 723px; top: 255px"
+                      style="--outline-color: #21a605; left: 729px; top: 249px"
                       class="location-map-dot"></span>
                       <!--item 6-->
                     <span
@@ -3581,19 +3581,19 @@
                       class="location-map-dot"></span>
                       <!--item 7-->
                     <span
-                      style="--outline-color: #21a605; left: 732px; top: 217px"
+                      style="--outline-color: #21a605; left: 734px; top: 217px"
                       class="location-map-dot"></span>
                       <!--item 8-->
                     <span
-                      style="--outline-color: #21a605; left: 737px; top: 229px"
+                      style="--outline-color: #21a605; left: 740px; top: 227px"
                       class="location-map-dot"></span>
                       <!--item 9-->
                     <span
-                      style="--outline-color: #21a605; left: 741px; top: 242px"
+                      style="--outline-color: #21a605; left: 745px; top: 237px"
                       class="location-map-dot"></span>
                       <!--item 10-->
                     <span
-                      style="--outline-color: #21a605; left: 746px; top: 254px"
+                      style="--outline-color: #21a605; left: 751px; top: 247px"
                       class="location-map-dot"></span>
                   </div>
 
@@ -3982,7 +3982,7 @@
                   <div class="dots-map-2024 dots-monitoreo d-none"
                     id="cusiana-sre-6">
                     <span
-                      style="scale: 0.88; position: absolute; left: 315px; top: 175px"
+                      style="scale: 0.88; position: absolute; left: 302px; top: 187px"
                       class="location-map-zona">
                       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="468.065" height="156" viewBox="0 0 468.065 156">
   <defs>
@@ -4282,7 +4282,7 @@
                       class="location-map-dot"></span>
                     <!--item 7-->
                     <span
-                      style="--outline-color: #ff0000; left: 708px; top: 1985x"
+                      style="--outline-color: #ff0000; left: 708px; top: 198px"
                       class="location-map-dot"></span>
                     <!--item 8-->
                     <span
